Fixed the alignment issue

--- a/themes/pmahomme/scss/_common.scss
+++ b/themes/pmahomme/scss/_common.scss
@@ -485,7 +485,7 @@ button.mult_submit {
 .pma-table table {
   .valueHeader,
   .value {
-    text-align: right;
+    text-align: center;
     white-space: normal;
   }
 
